fix: make the circle (wrapping the current date for weekly view) larger

--- a/edge-apps/google-calendar/src/components/weekly-calendar-view.css
+++ b/edge-apps/google-calendar/src/components/weekly-calendar-view.css
@@ -112,8 +112,8 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  min-width: 2rem;
-  height: 2rem;
+  min-width: 3.5rem;
+  height: 3.5rem;
   padding: 0 0.375rem;
   border-radius: 50%;
   background-color: var(--theme-color-primary);
@@ -160,8 +160,8 @@
   }
 
   .current-date {
-    min-width: 1.34rem;
-    height: 1.34rem;
+    min-width: 2.345rem;
+    height: 2.345rem;
     padding: 0 0.25rem;
   }
 
@@ -210,8 +210,8 @@
   }
 
   .current-date {
-    min-width: 0.84rem;
-    height: 0.84rem;
+    min-width: 1.47rem;
+    height: 1.47rem;
     padding: 0 0.157rem;
   }
 
@@ -260,8 +260,8 @@
   }
 
   .current-date {
-    min-width: 4rem;
-    height: 4rem;
+    min-width: 7rem;
+    height: 7rem;
     padding: 0 0.75rem;
   }
 
